# zed-markdoc-extension

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md  SECURITY.md  TODO.md  extension.toml  markdoc.config.json  package-lock.json  package.json
.github/workflows/: release.yml
extension/: Cargo.toml  extension.toml
extension/languages/markdoc/: brackets.scm  folds.scm  highlights.scm  indents.scm  injections.scm
languages/: config.toml  markdoc.json
languages/markdoc/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  outline.scm
queries/markdoc/: folds.scm  highlights.scm  indents.scm  injections.scm
samples/: blog-food-kitchen-systems.mdoc  blog-page.mdoc  blog-science-mars-materials.mdoc  blog-science-ocean-labs.mdoc  blog-tech-ai-interfaces.mdoc  blog-tech-edge-systems.mdoc  docs-page.mdoc  guide-page.mdoc  markdoc_complete_syntax.mdoc  reference-page.mdoc  sample.markdoc  sample.md  sample.mdoc  schema.js  syntax.mdoc  weird-tags.mdoc
scripts/: release.sh
src/: lib.rs
