[package]
name = "zed_markdoc_extension"
version = "1.0.0"
edition = "2021"
license = "MIT"
publish = false
# You can call this whatever you want, but matching the repo name keeps things tidy
description = "A Zed extension that integrates the Markdoc Language Server."

[lib]
# This is critical: tells Cargo we're building a Zed extension dynamic library
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Pull in Zed's extension SDK (re-exports serde_json, lsp helpers, etc.)
zed_extension_api = "0.1.0"
serde_json = "1.0"

# Optional niceties for reading project configs or doing filesystem ops
serde = { version = "1.0", features = ["derive"] }
